# HAT

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
benchmarks/: README.md  run_all_benchmarks.sh
benchmarks/results/: benchmark_results_20260110_181653.txt
examples/: demo_hat_memory.py
paper/: HAT_paper_complete.md
python/arms_hat/: __init__.py
python/tests/: test_hat_index.py
src/: lib.rs
src/adapters/: attention.rs  mod.rs  python.rs
src/adapters/storage/: memory.rs  mod.rs
src/engine/: arms.rs  mod.rs
