[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "arms-hat"
version = "0.1.0"
description = "Hierarchical Attention Tree for AI memory retrieval"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "AI Research Lab" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "memory", "embeddings", "vector-search", "llm"]

[project.urls]
Repository = "https://github.com/ai-research-lab/arms"

[project.optional-dependencies]
dev = ["pytest", "numpy"]

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "arms_hat"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
